tests/rosetta/transpiler/Clojure/ackermann-function.error
run error: exit status 1
Execution error (ExceptionInfo) at main/ackermann (ackermann-function.clj:8).
return

Full report at:
/tmp/clojure-5693445517427837829.edn
